<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10sp"
        android:layout_marginRight="10sp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="100sp"
                android:layout_height="wrap_content"
                android:text="@string/lbid"
                android:textColor="@android:color/holo_red_light"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/txtid"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:digits="0123456789"
                android:textStyle="italic" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="100sp"
                android:layout_height="25sp"
                android:text="@string/lbNo"
                android:textColor="@android:color/holo_red_light"
                android:textSize="15sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/txtsohieunhanvien"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textStyle="italic" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="100sp"
                android:layout_height="25sp"
                android:text="@string/lbname"
                android:textColor="@android:color/holo_red_light"
                android:textSize="15sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/txtten"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textStyle="italic" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="100sp"
                android:layout_height="25sp"
                android:text="@string/lbbd"
                android:textColor="@android:color/holo_red_light"
                android:textSize="15sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txtngaysinh"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textStyle="italic" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="100sp"
                android:layout_height="25sp"
                android:text="@string/lbgender"
                android:textColor="@android:color/holo_red_light"
                android:textSize="15sp"
                android:textStyle="bold" />

            <RadioGroup
                android:id="@+id/btngioitinh"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/btnnam"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10sp"
                    android:text="Male" />

                <RadioButton
                    android:id="@+id/btnnu"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20sp"
                    android:text="Female" />
            </RadioGroup>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="100sp"
                android:layout_height="25sp"
                android:text="@string/lbphone"
                android:textColor="@android:color/holo_red_light"
                android:textSize="15sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/txtdienthoai"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:digits="0123456789"
                android:textStyle="italic" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="100sp"
                android:layout_height="25sp"
                android:text="@string/lbemail"
                android:textColor="@android:color/holo_red_light"
                android:textSize="15sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/txtemail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="textEmailAddress"
                android:textStyle="italic" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="100sp"
                android:layout_height="25sp"
                android:text="@string/lbaddresss"
                android:textColor="@android:color/holo_red_light"
                android:textSize="15sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/txtdiachi"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textStyle="italic" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/btncapnhat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="35sp"
                android:src="@drawable/chuyendoi" />

            <ImageButton
                android:id="@+id/btntimkiem"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20sp"
                android:src="@drawable/icon_timkiem" />

            <ImageButton
                android:id="@+id/btnthem"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20sp"
                android:src="@drawable/them" />

            <ImageButton
                android:id="@+id/btnchinhsua"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20sp"
                android:src="@drawable/capnhat" />

            <ImageButton
                android:id="@+id/btnxoa"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20sp"
                android:src="@drawable/xoa" />
        </LinearLayout>
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/holo_green_light"
        android:gravity="center"
        android:text="@string/lblist"
        android:textSize="20sp"
        android:textStyle="bold" />

    <ListView
        android:id="@+id/lvdanhsachnhanvien"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</LinearLayout>